# k8s-sidecar

./: THIRD_PARTY_LICENSES.txt  pyproject.toml  template.yaml
buildrpm/: k8s-sidecar-container-images.spec  k8s-sidecar.spec
olm/: build-image.sh
olm/builds/: Dockerfile
olm/jenkins/ci/: Jenkinsfile
src/: requirements.txt
