[project]
name = "k8s-sidecar"
version = "1.0.0" # Placeholder, actual version is managed by github-tag-action
description = "Kubernetes sidecar to watch for changes in resources and mount them as files."
requires-python = ">=3.12"
dependencies = [
    "kubernetes==32.0.1",
    "requests==2.32.5",
    "python-json-logger==4.0.0",
    "logfmter==0.0.11",
    "argparse==1.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
